GNOME Bugzilla – Bug 764190
Couldn't find the project I'm working on
Last modified: 2016-05-05 10:23:32 UTC
I've been working on a project for a few days now. Every time I open builder I have to create a new project, because it's not listed in builder's initial page. The project is not a git project [yet]. It's just a directory with a bunch of files (don't know if it's relevant).
currently, only autotools projects ( that is with at least a configure.ac file ) are show by the greeter
Right, but why close this as NOTABUG? At least it's a valid enhancement request.
The particular issue you reported is indeed not a bug, since it's just something that's not implemented (rather something that doesn't work and that should be working already). If you want a specific type of projects to be recognized, you should open a bug report about it. For reference we already have bug #743280 for Meson and bug #751761 for cmake.
By the way the greeter as a button that allows you to add projects that are not in the list.
That's exactly what this bug report is about. The button you mentioned (New), which creates a new project, doesn't make it persistent. Every time I open builder I have to press that button, navigate to the directory where my project lives and create it. Regarding the project being attached to a build system: Can't I just have a project which is a simple directory with a bunch of files in it?
(In reply to Jonh Wendell from comment #5) > The button you mentioned (New), which creates a new project, doesn't make it > persistent. Every time I open builder I have to press that button, navigate > to the directory where my project lives and create it. Ah. That works for me, so there's indeed a bug showing up for you. > Regarding the project being attached to a build system: Can't I just have a > project which is a simple directory with a bunch of files in it? Yes, you can. I just misunderstood what your report was about. Maybe the title could be rephrased to reflect on the actual issue?
I'm using master branch from git
I just tried opening an empty folder from "New". The empty folder shows up under "Recent Projects" when I restart Builder. The folder will not appear under recents if: 1) it is outside the user's home directory 2) it is a hidden folder(dot preceded) 3) it is under Downloads/
refer bug #750818
A-ha! That's the reason: It's inside a hidden folder! Why this behavior? For the context: I'm working on a gnome Shell extension, which lives inside ~/.local/share/gnome-shell...
(In reply to Jonh Wendell from comment #10) I need to make a correction. The folder will not be listed under recents if it's relative path within home directory is dot preceded. > Why this behavior? For the context: I'm working on a gnome Shell extension, > which lives inside ~/.local/share/gnome-shell... This condition is applied so that opening files within .local, .cache or .config does not list them as projects. see bug #750818.
Created attachment 327334 [details] [review] context: allow projects in .local We often get bug reports on irc/bugzilla about created projects being ignored. It is usually related to creating gnome-shell extensions in the location that gnome-shell reads them from. Might as well just allow creating projects in .local.
Also pushed to stable branch for 3.20.4. Attachment 327334 [details] pushed as 0fb5a58 - context: allow projects in .local