context: allow projects in .local

We often get bug reports on irc/bugzilla about created projects being
ignored. It is usually related to creating gnome-shell extensions in the
location that gnome-shell reads them from.

Might as well just allow creating projects in .local.

https://bugzilla.gnome.org/show_bug.cgi?id=764190